# clueless

./: .dockerignore  Cargo.toml  Dockerfile  home.css  index.html  quotes.toml  root.css
src/: main.rs  quotes.rs
