[package]
name = "clueless"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.81"
leptos = { version = "0.8.2", features = ["csr"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
web-sys = { version = "0.3.81", features = [
	"Clipboard",
	"Window",
	"Navigator",
] }
